# kt

./: .gitignore  CMakeLists.txt  README.md
Bench/: Bench.h  CMakeLists.txt  Entry.cpp  HashMapBench.cpp  SortBench.cpp
Scripts/: CMakeMacros.cmake
Tests/: ArrayHashMap.cpp  CMakeLists.txt  Concurrency.cpp  Containers.cpp  Core.cpp  File.cpp  Handles.cpp  HashMap.cpp  Math.cpp  Memory.cpp  SIMD.cpp  Serialization.cpp  Slice.cpp  Sort.cpp  StaticFunctionTest.cpp  String.cpp  TestMain.cpp  Timer.cpp
src/kt/: AABB.h  Array.h  ArrayHashMap.h  CMakeLists.txt  Concurrency.cpp  Concurrency.h  DebugAllocator.cpp  DebugAllocator.h  File.cpp  File.h  FilePath.cpp  FilePath.h  HandleAllocator.cpp  HandleAllocator.h  Handles.h  Hash.cpp  Hash.h  HashMap.h  HashMapDeclare.h  LinearAllocator.cpp  LinearAllocator.h  Logging.cpp  Logging.h  Macros.h  Mat2.h  Mat3.h  Mat4.h  MathUtil.h  Memory.cpp  Memory.h  Platform.h  Quat.h  Random.h  SIMD.h  Serialization.cpp  Serialization.h  Slice.h  Sort.h  StackTrace.cpp  StackTrace.h  (+12 more)
src/kt/inl/: AABB.inl  Array.inl  ArrayHashMap.inl  AtomicImpl_GCC.inl  AtomicImpl_Generic.inl  AtomicImpl_MSVC.inl  Concurrency.inl  DebugAllocator.inl  Handles.inl  Hash.inl  HashMap.inl  LinearAllocator.inl  Mat2.inl  Mat3.inl  Mat4.inl  MathUtil.inl  Memory.inl  Quat.inl  Random.inl  SIMD.inl  SIMD_SSE.inl  Serialization.inl  Sort.inl  StaticFunction.inl  Strings.inl  Vec2.inl  Vec3.inl  Vec4.inl  kt.inl  simd_v4b32_sse.inl  simd_v4f32_sse.inl
